--- a/wiki/pastiche.wiki
+++ b/wiki/pastiche.wiki
@@ -1,4 +1,4 @@
-#summary Ideas for using pastiche, examples at [http://pastiche.info pastiche.info].
+#summary Ideas for using pastiche, examples at pastiche.info.
 
 = Ideas =
 
@@ -6,7 +6,7 @@
  * p2p or server-based
  * areas (e.g. shopping, travel, production) and resources, supply/demand
  * urban planning, liquid architecture
- * *game*, compete, grow
+ * *game*, compete, grow, local views on the world
  * dada info *search*/browse
  * traces
  * photo/music collection
