Edited wiki page through web user interface.

--- a/wiki/pastiche.wiki
+++ b/wiki/pastiche.wiki
@@ -8,7 +8,8 @@
  * urban planning, liquid architecture
  * *game*, compete, grow, local views on the world
  * dada info *search*/browse
- * traces
+ * traces, curiosity
+ * history, context
  * photo/music collection
 
 [http://pastiche.info pastiche.info]
