Edited wiki page through web user interface.

--- a/wiki/pastiche.wiki
+++ b/wiki/pastiche.wiki
@@ -7,7 +7,7 @@
  * areas (e.g. shopping, travel, production) and resources, supply/demand
  * urban planning, liquid architecture
  * *game*, compete, grow, local views on the world
- * dada info *search*/browse
+ * metadada info *search*/browse
  * traces, curiosity
  * history, context
  * photo/music collection
