Edited wiki page through web user interface.

--- a/wiki/pastiche.wiki
+++ b/wiki/pastiche.wiki
@@ -78,6 +78,7 @@ Some applications of pastiche in the artistic domain will be demonstrated at [ht
  * dada, arp
  * vian
  * gainsbourg
+ * sartre: l'être et le néant
  * moholy-nagy
  * lissitzky
  * derrida: deconstruction, différance
