--- a/wiki/pastiche.wiki
+++ b/wiki/pastiche.wiki
@@ -116,7 +116,8 @@ tbd. [http://pastiche.info pastiche.info]
  * Agency(Agent): control groups of agents, forward messages
  * pastiche as karrigell service
  * p2p vs. server-based
- * mobility, ad-hoc networks, Pyro???
+ * mobility, ad-hoc networks, Pyro or Web Services???
+ * leasing of AMS registration
  * [http://karrigell.sourceforge.net/ karrigell]
  * [http://pyjamas.pyworks.org/ pyjamas]
  * [http://rdflib.net/ rdflib]
